--- a/src/components/ResultsPane.css
+++ b/src/components/ResultsPane.css
@@ -9,4 +9,5 @@
     width: 40%;
     padding: 15px;
     background-color: var(--source-colour-gray-9);
+    font-family: var(--source-font-family-body);
 }
